# quad_control

./: LICENCE  LICENSE  README.md  mnist.ipynb
gait_panel_plugin/: CMakeLists.txt  package.xml  plugins.xml
gait_panel_plugin/include/gait_panel_plugin/: gait_panel.hpp
gait_panel_plugin/src/: gait_panel.cpp
quad_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
quad_control/config/controller/: config.yaml
quad_control/config/controller_rl/: anymal-c.yaml  quad_controller_rl.yaml
quad_control/config/mpc/: task.info
quad_control/config/wbc/: task.info
quad_control/launch/: quad_control_rl.launch.py
quad_control/launch/command/: quad_robot_command.launch.py
quad_control/launch/controller/: quad_controller.launch.py  quad_controller_rl.launch.py  spawn_anymal.launch.py
quad_control/launch/gazebo/: gazebo_sim.launch.py
quad_control/launch/mpc_dummy/: legged_robot_ddp.launch.py  legged_robot_ipm.launch.py  legged_robot_sqp.launch  legged_robot_sqp.launch.py  multiplot.launch  multiplot.launch.py  quad_robot_ddp.launch.py  quad_robot_ipm.launch.py  quad_robot_sqp.launch.py
quad_control/model/: anymal.complete.xacro  anymal.gazebo.xacro  anymal.ros2_control.xacro
quad_control/model/anymal_c/urdf/: anymal.urdf
quad_control/policy/: anymal-c.onnx
quad_control/rviz/: quad_robot.rviz
quad_control_ct/: CMakeLists.txt  package.xml  plugins.xml
quad_control_ct/config/: config.yaml
quad_control_ct/include/quad_control_ct/: HardwareInterfaceHandles.hpp  QuadController.hpp  SafetyChecker.hpp
quad_control_ct/launch/: spawn_anymal.launch.py
quad_control_ct/rviz/: quad_robot.rviz
quad_control_ct/src/: QuadController.cpp
quad_control_ct_rl/: CMakeLists.txt  package.xml  plugins.xml
quad_control_ct_rl/include/quad_control_ct_rl/: QuadControllerRL.hpp  RLRobotCfg.hpp
quad_control_ct_rl/src/: QuadControllerRL.cpp
quad_control_demo/: CMakeLists.txt  package.xml
quad_control_est/: CMakeLists.txt  package.xml
quad_control_est/include/legged_estimation/: StateEstimateBase.h
quad_control_est/include/quad_control_est/: FromTopiceEstimate.h  FromTopiceEstimate.hpp  LinearKalmanFilter.h  LinearKalmanFilter.hpp  StateEstimateBase.h  StateEstimateBase.hpp
quad_control_est/src/: FromTopiceEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
quad_control_gz/: CMakeLists.txt  package.xml  plugins.xml  quad_gz_sim_plugins.xml
quad_control_gz/config/: config.yaml
quad_control_gz/include/quad_control_gz/: QuadGaSim.hpp  QuadGaSimSystem.hpp  QuadGzSimSystem.hpp
quad_control_gz/launch/: spawn_anymal.launch.py
quad_control_gz/src/: QuadGaSimSystem.cpp  QuadGzSimSystem.cpp
quad_control_gz/urdf/: anymal.complete.xacro  anymal.complete.xarco  anymal.gazebo.xacro  anymal.ros2_control.xacro  anymal.urdf  robot.gazebo.xacro  robot.ros2_control.xacro
quad_control_mpc/: CMakeLists.txt  package.xml
quad_control_mpc/config/command/: reference.info
quad_control_mpc/config/mpc/: task.info
quad_control_mpc/include/quad_control_mpc/: LeggedRobotInterface.h  LeggedRobotPreComputation.h  package_path.h.in
quad_control_mpc/include/quad_control_mpc/common/: ModelSettings.h  Types.h  utils.h
quad_control_mpc/include/quad_control_mpc/constraint/: EndEffectorLinearConstraint.h  FrictionConeConstraint.h  NormalVelocityConstraintCppAd.h  QuadSelfCollisionConstraint.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
quad_control_mpc/include/quad_control_mpc/cost/: LeggedRobotQuadraticTrackingCost.h
quad_control_mpc/include/quad_control_mpc/dynamics/: LeggedRobotDynamicsAD.h
quad_control_mpc/include/quad_control_mpc/foot_planner/: CubicSpline.h  SplineCpg.h  SwingTrajectoryPlanner.h
quad_control_mpc/include/quad_control_mpc/gait/: Gait.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  MotionPhaseDefinition.h
quad_control_mpc/include/quad_control_mpc/initialization/: LeggedRobotInitializer.h
quad_control_mpc/include/quad_control_mpc/reference_manager/: SwitchedModelReferenceManager.h
quad_control_mpc/src/: LeggedRobotInterface.cpp  LeggedRobotPreComputation.cpp
quad_control_mpc/src/common/: ModelSettings.cpp
quad_control_mpc/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
quad_control_mpc/src/dynamics/: LeggedRobotDynamicsAD.cpp
quad_control_mpc/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
quad_control_mpc/src/gait/: Gait.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
quad_control_mpc/src/initialization/: LeggedRobotInitializer.cpp
quad_control_mpc/src/reference_manager/: SwitchedModelReferenceManager.cpp
quad_control_mpc/test/: AnymalFactoryFunctions.cpp
quad_control_mpc/test/constraint/: testEndEffectorLinearConstraint.cpp  testFrictionConeConstraint.cpp  testZeroForceConstraint.cpp
quad_control_mpc/test/include/quad_control_mpc/test/: AnymalFactoryFunctions.h
quad_control_ros/: CMakeLists.txt  package.xml
quad_control_ros/launch/: legged_robot_ddp.launch  legged_robot_ddp.launch.py  legged_robot_ipm.launch  legged_robot_ipm.launch.py  legged_robot_sqp.launch.py  quad_robot_cmd.launch.py
quad_control_ros/src/: LeggedRobotDdpMpcNode.cpp  LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotIpmMpcNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
quad_control_se/: CMakeLists.txt  package.xml
quad_control_se/include/quad_control_se/: FromTopiceEstimate.hpp  LinearKalmanFilter.hpp  StateEstimateBase.hpp
quad_control_se/src/: FromTopiceEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
quad_control_wbc/: CMakeLists.txt  package.xml
quad_control_wbc/config/wbc/: task.info
quad_control_wbc/include/quad_control_wbc/: HierarchicalQp.h  HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
quad_control_wbc/src/: HierarchicalQp.cpp  HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
quad_control_wbc/test/: HQp_test.cpp  HoQp_test.cpp
(+11 files in other folders)
