<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quad_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liyuxin_2016@163.com">l</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gait_panel_plugin</exec_depend>
  <exec_depend>quad_control_ct</exec_depend>
  <exec_depend>quad_control_gz</exec_depend>
  <exec_depend>quad_control_mpc</exec_depend>
  <exec_depend>quad_control_ros</exec_depend>
  <exec_depend>quad_control_se</exec_depend>
  <exec_depend>quad_control_wbc</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
