<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quad_control_demo</name>
  <version>0.0.0</version>
  <description>The quad_control_demo package</description>
  <maintainer email="liyuxin_2016@163.com">l</maintainer>

  <license>BSD-3</license>
  <author>Yuxin Li</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
