<?xml version="1.0"?>
<package format="3">
  <name>quad_control_gz</name>
  <version>0.0.1</version>
  <description>The quad_control_gz package</description>
  <maintainer email="liyuxin_2016@163.com">Yuxin Li</maintainer>

  <license>Apache License 2.0</license>
  <author>Alejandro Hernández</author>
  <author>Yuxin Li</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_sim_vendor</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>control_toolbox</depend>
  <depend>gz_ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
