<?xml version="1.0"?>
<package format="3">
  <name>quad_control_wbc</name>
  <version>0.0.0</version>
  <description>The quad_control_wbc package</description>
  <maintainer email="liyuxin_2016@163.com">Yuxin Li</maintainer>

  <license>BSD-3</license>
  <author>Yuxin Li</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pinocchio</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>boost</depend>

  <depend>rclcpp</depend>
  <depend>quad_control_mpc</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>